# uc-intg-rvolution

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  r_volution_discovery.py  r_volution_simulator.py  requirements.txt
.github/workflows/: build.yml
uc_intg_rvolution/: __init__.py  __main__.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup.py  setup_flow.py  switch.py
